prevent scrollbars on rubric ratings in firefox
closes OUT-2324

Test plan:
Using Firefox:
- create a rubric aligned to an outcome
- assess a student using that rubric
- visit sLMGB, verify that rubric criterion
  for the assessed assignment does not show
  vertical scrollbars and does show all relevant
  content

Reviewed-on: https://gerrit.instructure.com/154355
Tested-by: Jenkins
QA-Review: Augusto Callejas <acallejas@instructure.com>
Product-Review: Sidharth Oberoi <soberoi@instructure.com>

--- a/app/stylesheets/components/_rubric.scss
+++ b/app/stylesheets/components/_rubric.scss
@@ -106,6 +106,7 @@
   border-right: 0;
   border-bottom: 0;
   position: relative;
+  overflow-y: hidden;
 }
 
 .react-rubric .rating-tier .rating-footer {
